Sentry: Tone down missing or incomplete instance messages.